--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ vendor
 data
 test.go
 _test.go
+ui
 
 # Others
 .DS_STORE
@@ -12,7 +13,7 @@ _test.go
 glide.lock
 
 # Builds
-trafficmonkey-*
+/restmonkey-*
 bindata*
 
 # SiteBuild
