--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -13,10 +13,26 @@ spec:
       containers:
       - name: restmonkey
         image: peng-docker-prod.metroscales.io/reliability/restmonkey:latest
+        env:
+        - name: HTTP_INGRESS
+          value: "restmonkey.apps-api-k8s-002-test9-mcc-be-gcw1.metroscales.io"
         ports:
         - name: http
           protocol: TCP
           containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /.well-known/live
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /.well-known/ready
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 10
+
         resources:
           requests:
             memory: 50Mi
