--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,23 @@ bindata*
 
 # SiteBuild
 site
+
+
+# UI 
+node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
