--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -2,6 +2,7 @@
   "name": "uStress",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-react": "^7.0.0",
