--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -11,8 +11,13 @@
     "axios": "^0.18.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babelify": "^10.0.0",
+    "chart.js": "^2.7.3",
+    "chartjs-plugin-responsive-downsample": "^1.1.3",
+    "chartjs-plugin-zoom": "^0.6.6",
     "node-sass": "^4.11.0",
+    "notistack": "^0.4.2",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
