--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "axios": "^0.18.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babelify": "^10.0.0",
